--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* .cus-active {
+    @apply border-b-4 rounded-none relative;
+} */
+
+.cus-active {
+    position: relative;
+}
+
+.cus-active::after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #fff;
+    border-radius: 0;
+}
