--- a/src/output.css
+++ b/src/output.css
@@ -616,12 +616,12 @@ video {
   right: -2rem;
 }
 
-.left-0 {
-  left: 0px;
+.bottom-10 {
+  bottom: 2.5rem;
 }
 
-.left-16 {
-  left: 4rem;
+.left-0 {
+  left: 0px;
 }
 
 .left-2 {
@@ -630,6 +630,10 @@ video {
 
 .left-20 {
   left: 5rem;
+}
+
+.left-\[450px\] {
+  left: 450px;
 }
 
 .right-4 {
@@ -648,6 +652,14 @@ video {
   top: 0.5rem;
 }
 
+.top-40 {
+  top: 10rem;
+}
+
+.top-\[110px\] {
+  top: 110px;
+}
+
 .top-\[250px\] {
   top: 250px;
 }
@@ -664,48 +676,20 @@ video {
   top: 100%;
 }
 
-.left-10 {
-  left: 2.5rem;
+.top-\[70px\] {
+  top: 70px;
 }
 
-.top-10 {
-  top: 2.5rem;
+.top-\[170px\] {
+  top: 170px;
 }
 
-.top-4 {
-  top: 1rem;
+.left-4 {
+  left: 1rem;
 }
 
-.top-40 {
-  top: 10rem;
-}
-
-.left-40 {
-  left: 10rem;
-}
-
-.left-\[\] {
-  left: ;
-}
-
-.left-\[300px\] {
-  left: 300px;
-}
-
-.left-\[400px\] {
-  left: 400px;
-}
-
-.left-\[420px\] {
-  left: 420px;
-}
-
-.left-\[450px\] {
-  left: 450px;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
+.top-\[115px\] {
+  top: 115px;
 }
 
 .z-40 {
@@ -750,6 +734,10 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -774,6 +762,34 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+
+.mt-\[170px\] {
+  margin-top: 170px;
+}
+
+.mt-\[200px\] {
+  margin-top: 200px;
+}
+
+.mt-\[250px\] {
+  margin-top: 250px;
+}
+
+.mt-\[230px\] {
+  margin-top: 230px;
+}
+
+.mt-\[210px\] {
+  margin-top: 210px;
+}
+
 .block {
   display: block;
 }
@@ -796,6 +812,10 @@ video {
 
 .h-12 {
   height: 3rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-3 {
@@ -838,8 +858,12 @@ video {
   height: 100lvh;
 }
 
-.h-20 {
-  height: 5rem;
+.h-screen {
+  height: 100vh;
+}
+
+.h-28 {
+  height: 7rem;
 }
 
 .w-1\/2 {
@@ -850,8 +874,16 @@ video {
   width: 2.5rem;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
 .w-3 {
   width: 0.75rem;
+}
+
+.w-32 {
+  width: 8rem;
 }
 
 .w-4\/5 {
@@ -874,6 +906,10 @@ video {
   width: 2rem;
 }
 
+.w-\[150px\] {
+  width: 150px;
+}
+
 .w-\[250px\] {
   width: 250px;
 }
@@ -882,8 +918,12 @@ video {
   width: 100%;
 }
 
-.w-32 {
-  width: 8rem;
+.w-28 {
+  width: 7rem;
+}
+
+.w-60 {
+  width: 15rem;
 }
 
 .min-w-\[300px\] {
@@ -923,6 +963,12 @@ video {
   cursor: pointer;
 }
 
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -933,6 +979,18 @@ video {
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-8 {
+  grid-template-columns: repeat(8, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -967,16 +1025,16 @@ video {
   gap: 0px;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1041,6 +1099,10 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .rounded-b-lg {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -1053,6 +1115,14 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-b-4 {
@@ -1078,6 +1148,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
+.bg-\[\#03677E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 103 126 / var(--tw-bg-opacity, 1));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
@@ -1088,9 +1163,19 @@ video {
   background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
 }
 
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
+}
+
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-800 {
@@ -1101,11 +1186,6 @@ video {
 .bg-orange-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 237 213 / var(--tw-bg-opacity, 1));
-}
-
-.bg-primary {
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 103 126 / var(--tw-bg-opacity, 1));
 }
 
 .bg-red-500 {
@@ -1125,6 +1205,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -1189,6 +1274,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1206,6 +1296,10 @@ video {
 
 .py-4 {
   padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.pb-4 {
   padding-bottom: 1rem;
 }
 
@@ -1362,6 +1456,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1390,18 +1490,6 @@ video {
   border-radius: 0;
 }
 
-/* 
-@layer utilities {
-
-    .no-scrollbar::-webkit-scrollbar {
-        display: none;
-    }
-    .no-scrollbar {
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-    }
-} */
-
 .scrollbar-hide {
   -ms-overflow-style: none;
   /* IE and Edge */
@@ -1413,6 +1501,8 @@ video {
   display: none;
   /* Chrome, Safari, and Opera */
 }
+
+/* Style the track */
 
 .hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
@@ -1454,9 +1544,32 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-blue-600:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(37 99 235 / var(--tw-ring-opacity, 1));
+}
+
 @media (min-width: 768px) {
   .md\:mt-0 {
     margin-top: 0px;
+  }
+
+  .md\:mt-\[\] {
+    margin-top: ;
+  }
+
+  .md\:mt-\[220px\] {
+    margin-top: 220px;
   }
 
   .md\:flex {
@@ -1469,6 +1582,10 @@ video {
 
   .md\:h-72 {
     height: 18rem;
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .md\:grid-cols-2 {
@@ -1502,31 +1619,43 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:h-80 {
-    height: 20rem;
+  .lg\:mt-\[210px\] {
+    margin-top: 210px;
   }
 
-  .lg\:h-40 {
-    height: 10rem;
+  .lg\:mt-\[220px\] {
+    margin-top: 220px;
   }
 
-  .lg\:h-0 {
-    height: 0px;
-  }
-
-  .lg\:h-48 {
-    height: 12rem;
-  }
-
-  .lg\:h-60 {
-    height: 15rem;
-  }
-
-  .lg\:h-5 {
-    height: 1.25rem;
+  .lg\:mt-\[230px\] {
+    margin-top: 230px;
   }
 
   .lg\:h-52 {
     height: 13rem;
+  }
+
+  .lg\:w-40 {
+    width: 10rem;
+  }
+
+  .lg\:w-60 {
+    width: 15rem;
+  }
+
+  .lg\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .lg\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .lg\:w-\[500px\] {
+    width: 500px;
+  }
+
+  .lg\:w-\[400px\] {
+    width: 400px;
   }
 }
