--- a/src/output.css
+++ b/src/output.css
@@ -632,6 +632,10 @@ video {
   left: 5rem;
 }
 
+.left-\[350px\] {
+  left: 350px;
+}
+
 .left-\[450px\] {
   left: 450px;
 }
@@ -652,12 +656,20 @@ video {
   top: 0.5rem;
 }
 
+.top-28 {
+  top: 7rem;
+}
+
 .top-40 {
   top: 10rem;
 }
 
-.top-\[110px\] {
-  top: 110px;
+.top-\[210px\] {
+  top: 210px;
+}
+
+.top-\[212px\] {
+  top: 212px;
 }
 
 .top-\[250px\] {
@@ -676,20 +688,8 @@ video {
   top: 100%;
 }
 
-.top-\[70px\] {
-  top: 70px;
-}
-
-.top-\[170px\] {
-  top: 170px;
-}
-
-.left-4 {
-  left: 1rem;
-}
-
-.top-\[115px\] {
-  top: 115px;
+.z-30 {
+  z-index: 30;
 }
 
 .z-40 {
@@ -722,6 +722,16 @@ video {
   margin-right: auto;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -734,8 +744,12 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
 }
 
 .mr-2 {
@@ -762,32 +776,28 @@ video {
   margin-top: 1.25rem;
 }
 
-.mt-\[\] {
-  margin-top: ;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
-.mt-\[100px\] {
-  margin-top: 100px;
+.mr-4 {
+  margin-right: 1rem;
 }
 
-.mt-\[170px\] {
-  margin-top: 170px;
+.ml-6 {
+  margin-left: 1.5rem;
 }
 
-.mt-\[200px\] {
-  margin-top: 200px;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
-.mt-\[250px\] {
-  margin-top: 250px;
+.mb-40 {
+  margin-bottom: 10rem;
 }
 
-.mt-\[230px\] {
-  margin-top: 230px;
-}
-
-.mt-\[210px\] {
-  margin-top: 210px;
+.mb-60 {
+  margin-bottom: 15rem;
 }
 
 .block {
@@ -818,12 +828,20 @@ video {
   height: 4rem;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .h-3 {
   height: 0.75rem;
 }
 
 .h-32 {
   height: 8rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-40 {
@@ -850,20 +868,20 @@ video {
   height: 24rem;
 }
 
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[calc\(100vh-212px\)\] {
+  height: calc(100vh - 212px);
+}
+
 .h-full {
   height: 100%;
 }
 
 .h-lvh {
   height: 100lvh;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-28 {
-  height: 7rem;
 }
 
 .w-1\/2 {
@@ -878,6 +896,10 @@ video {
   width: 4rem;
 }
 
+.w-2\/6 {
+  width: 33.333333%;
+}
+
 .w-3 {
   width: 0.75rem;
 }
@@ -886,8 +908,16 @@ video {
   width: 8rem;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .w-4\/5 {
   width: 80%;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
 }
 
 .w-40 {
@@ -906,24 +936,44 @@ video {
   width: 2rem;
 }
 
+.w-\[10\%\] {
+  width: 10%;
+}
+
 .w-\[150px\] {
   width: 150px;
+}
+
+.w-\[20\%\] {
+  width: 20%;
 }
 
 .w-\[250px\] {
   width: 250px;
 }
 
+.w-\[35\%\] {
+  width: 35%;
+}
+
+.w-\[350px\] {
+  width: 350px;
+}
+
+.w-\[calc\(100\%-350px\)\] {
+  width: calc(100% - 350px);
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-28 {
-  width: 7rem;
+.w-1\/3 {
+  width: 33.333333%;
 }
 
-.w-60 {
-  width: 15rem;
+.w-2\/3 {
+  width: 66.666667%;
 }
 
 .min-w-\[300px\] {
@@ -963,10 +1013,12 @@ video {
   cursor: pointer;
 }
 
-.appearance-none {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+.list-disc {
+  list-style-type: disc;
+}
+
+.grid-flow-col {
+  grid-auto-flow: column;
 }
 
 .grid-cols-1 {
@@ -981,16 +1033,12 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+.grid-rows-4 {
+  grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-8 {
-  grid-template-columns: repeat(8, minmax(0, 1fr));
-}
-
-.flex-row {
-  flex-direction: row;
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1027,6 +1075,10 @@ video {
 
 .gap-10 {
   gap: 2.5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-4 {
@@ -1079,6 +1131,10 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1103,6 +1159,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .rounded-b-lg {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -1117,10 +1177,6 @@ video {
   border-width: 1px;
 }
 
-.border-b {
-  border-bottom-width: 1px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -1133,9 +1189,31 @@ video {
   border-top-width: 1px;
 }
 
-.border-blue-900 {
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-0 {
+  border-bottom-width: 0px;
+}
+
+.border-b-\[1px\] {
+  border-bottom-width: 1px;
+}
+
+.border-\[\#03677E\] {
   --tw-border-opacity: 1;
-  border-color: rgb(30 58 138 / var(--tw-border-opacity, 1));
+  border-color: rgb(3 103 126 / var(--tw-border-opacity, 1));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
 .border-gray-700 {
@@ -1148,9 +1226,33 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
-.bg-\[\#03677E\] {
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
+}
+
+.border-b-\[1\] {
+  border-bottom-color: 1;
+}
+
+.bg-\[\#0B3C49\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(3 103 126 / var(--tw-bg-opacity, 1));
+  background-color: rgb(11 60 73 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#DCFFD9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 255 217 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#E9E3FF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 227 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#FFF2D6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 242 214 / var(--tw-bg-opacity, 1));
 }
 
 .bg-black {
@@ -1158,14 +1260,14 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
+}
+
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
-}
-
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-200 {
@@ -1173,19 +1275,34 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity, 1));
-}
-
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+}
+
+.bg-indigo-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity, 1));
+}
+
 .bg-orange-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 237 213 / var(--tw-bg-opacity, 1));
+}
+
+.bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity, 1));
+}
+
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 103 126 / var(--tw-bg-opacity, 1));
 }
 
 .bg-red-500 {
@@ -1207,13 +1324,17 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-green-500 {
+.bg-yellow-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
+}
+
+.\!bg-none {
+  background-image: none !important;
 }
 
 .bg-cover {
@@ -1269,6 +1390,11 @@ video {
   padding-right: 1rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1299,8 +1425,9 @@ video {
   padding-bottom: 1rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pb-5 {
@@ -1321,6 +1448,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .font-roboto {
@@ -1418,6 +1549,26 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity, 1));
+}
+
+.text-green-700 {
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity, 1));
+}
+
+.text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity, 1));
+}
+
+.text-indigo-700 {
+  --tw-text-opacity: 1;
+  color: rgb(67 56 202 / var(--tw-text-opacity, 1));
+}
+
 .text-orange-600 {
   --tw-text-opacity: 1;
   color: rgb(234 88 12 / var(--tw-text-opacity, 1));
@@ -1433,9 +1584,33 @@ video {
   color: rgb(13 148 136 / var(--tw-text-opacity, 1));
 }
 
+.text-txtprimary {
+  --tw-text-opacity: 1;
+  color: rgb(11 60 73 / var(--tw-text-opacity, 1));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
+}
+
+.text-yellow-800 {
+  --tw-text-opacity: 1;
+  color: rgb(133 77 14 / var(--tw-text-opacity, 1));
+}
+
+.accent-\[\#0B3C49\] {
+  accent-color: #0B3C49;
 }
 
 .shadow {
@@ -1502,7 +1677,27 @@ video {
   /* Chrome, Safari, and Opera */
 }
 
-/* Style the track */
+/* Selected date and time background */
+
+.flatpickr-day.selected,
+.flatpickr-day.startRange,
+.flatpickr-day.endRange {
+  background: #0B3C49 !important;
+  color: white !important;
+}
+
+/* Hover effect for days */
+
+.flatpickr-day:hover {
+  background: rgba(11, 60, 73, 0.2) !important;
+  /* Slightly lighter hover color */
+  color: #0B3C49 !important;
+}
+
+.hover\:bg-\[\#0a1e24\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 30 36 / var(--tw-bg-opacity, 1));
+}
 
 .hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
@@ -1548,28 +1743,14 @@ video {
   text-decoration-line: underline;
 }
 
-.focus\:ring-2:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-blue-600:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(37 99 235 / var(--tw-ring-opacity, 1));
+.focus\:bg-gray-200:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
 @media (min-width: 768px) {
   .md\:mt-0 {
     margin-top: 0px;
-  }
-
-  .md\:mt-\[\] {
-    margin-top: ;
-  }
-
-  .md\:mt-\[220px\] {
-    margin-top: 220px;
   }
 
   .md\:flex {
@@ -1582,10 +1763,6 @@ video {
 
   .md\:h-72 {
     height: 18rem;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .md\:grid-cols-2 {
@@ -1619,43 +1796,8 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:mt-\[210px\] {
-    margin-top: 210px;
-  }
-
-  .lg\:mt-\[220px\] {
-    margin-top: 220px;
-  }
-
-  .lg\:mt-\[230px\] {
-    margin-top: 230px;
-  }
-
   .lg\:h-52 {
     height: 13rem;
   }
-
-  .lg\:w-40 {
-    width: 10rem;
-  }
-
-  .lg\:w-60 {
-    width: 15rem;
-  }
-
-  .lg\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .lg\:w-\[500px\] {
-    width: 500px;
-  }
-
-  .lg\:w-\[400px\] {
-    width: 400px;
-  }
 }
+
